src/objects/SurveyLibrary__c.object
<CustomObject>
    <description>Stores the connection details for a library on another server that this org can download surveys from</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the library is available for use</description>
        <inlineHelpText>Uncheck to deactivate the library from use</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Information about the library</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsPPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the remote library allows downloads of PPI Templates</description>
        <label>Is PPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the remote library allows downloads of surveys</description>
        <label>Is Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this library allows downloads of templates</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PpiResultsEndpoint__c</fullName>
        <label>Ppi Results Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoteLibraryPath__c</fullName>
        <description>The path to the remote library endpoint on the remote server</description>
        <label>RemoteLibraryPath</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SurveyPreviewPath__c</fullName>
        <description>The path to the survey preview page</description>
        <label>SurveyPreviewPath</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>The end point that the surveys for this library can be got from</description>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Survey Library</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Ppi_Results_Endpoint</fullName>
        <active>true</active>
        <description>Validate that Survey Library  name is Grameen Foundation.</description>
        <errorConditionFormula>IF( AND(ISCHANGED( PpiResultsEndpoint__c ),Name &lt;&gt; &apos;Grameen Foundation&apos;) ,true ,false )</errorConditionFormula>
        <errorDisplayField>PpiResultsEndpoint__c</errorDisplayField>
        <errorMessage>Survey Library name must be Grameen Foundation to change Ppi Results Endpoint.</errorMessage>
    </validationRules>
</CustomObject>